Add description to Prisma::Group

--- a/lib/prisma/server/views/index.erb
+++ b/lib/prisma/server/views/index.erb
@@ -48,6 +48,7 @@
 
         <div class="span6">
           <h3><%= group.name.humanize %></h3>
+          <em><%= group.description %></em>
           <div id="<%= group.name %>_chart"></div>
         </div>
 
